--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -185,7 +185,7 @@ ion-header>ion-navbar>div>ion-row>ion-col:nth-child(1)>ion-icon {
 }
 
 .toolbar-background-md {
-    background: $theme_color_white;
+    background: #ffffff;
 }
 
 .secondary_color {
