--- a/src/pages/topics-list/topics-list.scss
+++ b/src/pages/topics-list/topics-list.scss
@@ -6,6 +6,9 @@ page-topics-list {
         color: $gray_color;
         padding-right: 10px;
     }
+    .bgcor{
+      background-color: #d59efb !important;
+    }
     // .item p {
     //     // font-size: 1.4rem;
     //     margin-top: 16px;
