--- a/src/pages/topics-content/topics-content.scss
+++ b/src/pages/topics-content/topics-content.scss
@@ -24,6 +24,9 @@ page-topics-content {
         display: inline-block;
         transition: background-color 0.6s ease;
     }
+    .toolbar-background-md{
+      background: #0162a8 !important;
+    }
     // ion-icon {
     //     font-size: 3.2em;
     //     color: $theme_color_white;
