--- a/src/pages/topics-list/topics-list.scss
+++ b/src/pages/topics-list/topics-list.scss
@@ -6,6 +6,21 @@ page-topics-list {
         color: $gray_color;
         padding-right: 10px;
     }
+    .toolbar-title {
+        font-size: 1.6rem;
+        color: #ffffff !important;
+    }
+    .footer-img{
+      height: 53px !important;
+      width: 100% !important;
+    }
+    .fclr{
+      font-size: 22px !important;
+      color: #0a5e9a !important;
+    }
+    .toolbar-background-md{
+      background: #0162a8 !important;
+    }
     .bgcor{
       background-color: #d59efb !important;
     }
