--- a/src/pages/topics-list/topics-list.scss
+++ b/src/pages/topics-list/topics-list.scss
@@ -15,11 +15,11 @@ page-topics-list {
       width: 100% !important;
     }
     .fclr{
-      font-size: 22px !important;
+      font-size: 15px !important;
       color: #0a5e9a !important;
     }
     .toolbar-background-md{
-      background: #0162a8 !important;
+      background: #136ca7 !important;
     }
     .bgcor{
       background-color: #d59efb !important;
