--- a/src/pages/methods/methods.scss
+++ b/src/pages/methods/methods.scss
@@ -13,7 +13,10 @@ page-methods {
         padding-bottom: 0px;
         color: $gray_color;
     }
-
+    .footer-img{
+      height: 53px !important;
+      width: 100% !important;
+    }
     ion-avatar {
         width: 40px !important;
         height: 40px !important;
@@ -39,21 +42,27 @@ page-methods {
         width: 100%;
     }
     .toolbar-background-md{
-      background: #0162a8 !important;
+      background: #136ca7 !important;
     }
     .card-md{
       border-radius: 2% !important;
     }
+
+    .txt-content {
+      position: absolute !important;
+      bottom: 0 !important;
+      left: 0 !important;
+      width: 100% !important;
+      font-size: 16px !important;
+      color: #fff !important;
+    }
+
+    .height-100{
+      height: 125px !important;
+    }
 }
 
-.txt-content {
-  position: absolute !important;
-  bottom: 0 !important;
-  left: 0 !important;
-  width: 100% !important;
-  font-size: 20px !important;
-  color: #fff !important;
-}
+
 
 .cl1{
   background: #4c8cba !important;
@@ -95,9 +104,7 @@ page-methods {
   width: 100% !important;
 }
 
-.height-100{
-  height: 149px !important;
-}
+
 .height-100p{
   height: 100% !important;
 }
