--- a/src/pages/methods/methods.scss
+++ b/src/pages/methods/methods.scss
@@ -60,6 +60,26 @@ page-methods {
     .height-100{
       height: 125px !important;
     }
+
+    .img3{
+      height: 100% !important;
+      width: 50% !important;
+      /* margin: 24% !important; */
+      margin-top: 4%;
+      /* margin-bottom: auto; */
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+    }
+
+    .height100 {
+      height: 100% !important;
+    }
+
+    .colset {
+      margin-right: 2% !important;
+      margin-left: 2% !important;
+    }
 }
 
 
@@ -81,7 +101,7 @@ page-methods {
 }
 
 .cl5{
-  background: #3fa492 !important;
+  background: #3fa7bb !important;
 }
 
 .cl6{
@@ -108,16 +128,7 @@ page-methods {
 .height-100p{
   height: 100% !important;
 }
-.img3{
-  height: 100% !important;
-  width: 50% !important;
-  /* margin: 24% !important; */
-  margin-top: 16%;
-  /* margin-bottom: auto; */
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-}
+
 
 .txtalignstart{
   text-align: start !important;
